After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 126907 - manual recalc breaks redraw, and is not exported
manual recalc breaks redraw, and is not exported
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
git master
Other All
: High major
: ---
Assigned To: Jody Goldberg
Jody Goldberg
: 127063 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2003-11-13 18:03 UTC by Frederic Parrenin
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
this is the XL file that shows the problem (14.00 KB, application/msexcel)
2003-11-13 18:04 UTC, Frederic Parrenin
Details

Description Frederic Parrenin 2003-11-13 18:03:29 UTC
I have an .xls file that show the following problem:
-open the sheet
-go to E2 with mouse
-enter the following formula: '=-C2'
-press <enter>

=> nothing appears in E1 cell

If you come back to E1 with cursor, and then move outside, the cell content
appears !
Comment 1 Frederic Parrenin 2003-11-13 18:04:32 UTC
Created attachment 21419 [details]
this is the XL file that shows the problem
Comment 2 Jody Goldberg 2003-11-13 18:19:26 UTC
I assume you mean E2 for all of them.

This is really odd.  I can replicate the problem with your sample sheet.
Not have not been able to recreate an example.
Comment 3 Frederic Parrenin 2003-11-14 09:04:41 UTC
Oh yes, it was E2 and not E1.

Yes, it is odd. 
I also was not able to produce another example sheet.
It is a sheet that somebody sent to me.

Regards.    Frédéric
Comment 4 Jody Goldberg 2003-11-15 08:00:19 UTC
Ahhh I see.
Manual recalc.

The main bug here is that we were assuming that cells with expressions did not
need an explicit redraw because a recalc would handle it.

The secondary problem is that manual recalc is not being persisted properly
to xml or xls.
Comment 5 Jody Goldberg 2003-11-15 19:22:51 UTC
- redraw fixed by recalculating the field on entry even with manual recalc
- export recalc setting to xls
- persist recalc and iteration flags with DOM and SAX interfaces as xml
Comment 6 Jody Goldberg 2003-11-16 02:21:32 UTC
*** Bug 127063 has been marked as a duplicate of this bug. ***