src/commands.c
@@ -852,6 +852,10 @@ cmd_set_text_redo (GnmCommand *cmd, WorkbookControl *wbc)
 		}
 	}
 
+	/* even for manual recalc we need to calc the new cell */
+	if (expr != NULL && !me->pos.sheet->workbook->recalc_auto)
+		cell_eval (cell);
+
 	return FALSE;
 }
 
